ASSERTION FAILED: tokens.find(item) == notFound in WebCore::DOMTokenList::replace https://bugs.webkit.org/show_bug.cgi?id=172473

Reviewed by Ryosuke Niwa.

Source/WebCore:

Fix bad assertion in DOMTokenList::replace(). If item == replacement, then the
assertion was wrong.

No new tests, unskipped existing test.

* html/DOMTokenList.cpp:
(WebCore::DOMTokenList::replace):

LayoutTests:

* TestExpectations:
Unskip test.

Canonical link: https://commits.webkit.org/189380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217255 268f45cc-cd09-0410-ab3c-d52691b4dbfc